# morning-digest

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
launchd/: com.morning-digest.interactive.plist  com.morning-digest.plist
src/morning_digest/: __main__.py  prompt.py  slack_format.py  slack_read.py  slack_source.py  window.py
src/morning_digest/monitor/: __init__.py  __main__.py  events.py  gitops.py  interactive.py  ledger.py  server.py  tasks.py
