[project]
name = "morning-digest"
version = "0.1.0"
description = "A morning to-do digest: Claude gathers Notion tasks + GitHub PRs and DMs you a summary on Slack."
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
# Interactive mode: ✅/⏭️ buttons in Slack that spawn local agents (Socket Mode).
# Not needed for the plain send-only digest.
interactive = [
    "slack-bolt>=1.18.0",
]
dev = [
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
